--- a/styles/youtube-header.css
+++ b/styles/youtube-header.css
@@ -19,6 +19,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: fixed;
+    top:0px;
+    left: 0px;
+    right: 0px;
+
+    background-color: white;
+    border-bottom: 1px solid rgb(240, 240, 240);
 }
 
 .left-section{
