--- a/styles/youtube-header.css
+++ b/styles/youtube-header.css
@@ -23,7 +23,7 @@
     top:0px;
     left: 0px;
     right: 0px;
-
+    z-index: 100;
     background-color: white;
     border-bottom: 1px solid rgb(240, 240, 240);
 }
@@ -98,6 +98,22 @@
 
 .notifications-icon{
     height: 24px;
+}
+
+.notification-icon-container{
+    position: relative;
+}
+
+.notification-count{
+    position: absolute;
+    top: -2px;
+    right: -5px;
+    background-color: rgb(200,0,0);
+    color: white;
+    font-family: Roboto,Arial;
+    font-size: 12px;
+    padding: 2px 6px 2px 6px;
+    border-radius: 10px;
 }
 
 .current-user-picture{
