--- a/styles/youtube-video.css
+++ b/styles/youtube-video.css
@@ -22,6 +22,7 @@
 
 .thumbanail-row{
     margin-bottom: 12px;
+    position: relative;
 }
 
 .video-author
@@ -39,4 +40,18 @@
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 16px;
     row-gap: 40px;
+}
+
+.video-time{
+    font-family: Roboto, Arial;
+    font-size: 12px;
+    font-weight: 500;
+    background-color: black;
+    color: white;
+    padding: 4px;
+    border-radius: 2px;
+
+    position: absolute;
+    right: 5px;
+    bottom: 8px;
 }
