--- a/styles/youtube-header.css
+++ b/styles/youtube-header.css
@@ -54,7 +54,6 @@
 
 .search-icon{
     height: 25px;
-    margin-top: 4px;
 }
 
 .search-button{
@@ -64,6 +63,42 @@
     border: 1px solid rgb(192,192,192);
     margin-left: -1px;
     margin-right: 10px;
+    
+}
+
+.search-button, 
+.voice-search-button,
+.upload-icon-container,
+.youtube-apps-icon-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.youtube-apps-icon-container .tooltip{
+    font-family: Roboto,Arial;
+    position: absolute;
+    background-color: gray;
+    color: white;
+    padding: 4px;
+    border-radius: 4px;
+    font-size: 12px;
+    bottom: -30px;
+    opacity: 0;
+    transition: opacity 0.15s;
+    pointer-events: none;
+    white-space: nowrap;
+}
+
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.youtube-apps-icon-container:hover .tooltip {
+    opacity: 1;
 }
 
 .voice-search-button{
@@ -76,7 +111,6 @@
 
 .voice-search-icon{
     height: 24px;
-    margin-top: 4px;
 }
 
 .right-section{
