--- a/styles/youtube-video.css
+++ b/styles/youtube-video.css
@@ -42,6 +42,23 @@
     row-gap: 40px;
 }
 
+@media(min-width:801px) and (max-width:1199){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media(max-width:800px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media(min-width:1200px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
 .video-time{
     font-family: Roboto, Arial;
     font-size: 12px;
